--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,9 @@
 {{page-title "EmberRoleBasedLogin"}}
 
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
+<div class="title"><strong>FileSystem Manager</strong></div>
+
+
+<LinkTo @route = "login-page">Login</LinkTo>
+{{!-- <LinkTo @route = "container">Container</LinkTo> --}}
 
 {{outlet}}
