--- a/app/components/mgmt-hold.hbs
+++ b/app/components/mgmt-hold.hbs
@@ -7,17 +7,17 @@
     <th style="padding: 5px 10px 5px 10px">Permissions</th>
   </tr>
   {{#each this.files as |file|}}
-        <tr>
+        <tr id="{{file.id}}">
             <td style="padding: 5px 10px 5px 10px">{{file.id}}</td>
-            <td style="padding: 5px 10px 5px 10px">{{file.fname}}</td>
+            <td style="padding: 5px 10px 5px 10px" id="fname-{{file.id}}">{{file.fname}}</td>
             <td style="padding: 5px 10px 5px 10px">
-              <input type="checkbox" name="FC" id="FC" checked={{is-fc file.permissionval}} style="padding-left: 5px;">
+              <input type="checkbox" name="FC" value="7" class="chkper-{{file.id}}" checked={{is-fc file.permissionval}} style="padding-left: 5px;" onchange={{fn this.update_permission file.id}}>
               <label for="FC">Full Controll</label>
-              <input type="checkbox" name="E" id="E" checked={{is-execute file.permissionval}} style="padding-left: 10px;">
+              <input type="checkbox" name="E" value="6" class="chkper-{{file.id}}" checked={{is-execute file.permissionval}} style="padding-left: 10px;" onchange={{fn this.update_permission file.id}}>
               <label for="E">Read and Execute</label>
-              <input type="checkbox" name="R" id="R" checked={{is-read file.permissionval}} style="padding-left: 10px;">
+              <input type="checkbox" name="R" value="2" class="chkper-{{file.id}}" checked={{is-read file.permissionval}} style="padding-left: 10px;" onchange={{fn this.update_permission file.id}}>
               <label for="R">Read</label>
-              <input type="checkbox" name="W" id="W" checked={{is-write file.permissionval}} style="padding-left: 10px;">
+              <input type="checkbox" name="W" value="1" class="chkper-{{file.id}}" checked={{is-write file.permissionval}} style="padding-left: 10px;" onchange={{fn this.update_permission file.id}}>
               <label for="W">Write</label>
             </td>
         </tr>
